--- a/Xo/packages.config
+++ b/Xo/packages.config
@@ -26,5 +26,6 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="structuremap" version="3.1.2.138" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
