Added bootstrap label HTML helpers

--- a/Xo/Views/Web.config
+++ b/Xo/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Xo" />
         <add namespace="Xo.Infrastructure.Alerts" />
+        <add namespace="Xo.Helpers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
