--- a/Xo/Areas/Accounts/Views/web.config
+++ b/Xo/Areas/Accounts/Views/web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="Xo" />
-        
+        <add namespace="Xo.Helpers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
