Renamed Accounts area Identity

--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -164,21 +164,21 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Areas\Accounts\Controllers\AccountController.cs" />
-    <Compile Include="Areas\Accounts\Controllers\ManageController.cs" />
-    <Compile Include="Areas\Accounts\Helpers\IdentityExtensions.cs" />
-    <Compile Include="Areas\Accounts\Models\AccountViewModels.cs" />
-    <Compile Include="Areas\Accounts\Models\ApplicationDbContext.cs" />
-    <Compile Include="Areas\Accounts\Models\ApplicationUser.cs" />
-    <Compile Include="Areas\Accounts\Models\IdentityUser.cs" />
-    <Compile Include="Areas\Accounts\Models\ManageViewModels.cs" />
-    <Compile Include="Areas\Accounts\Models\IdentityUserLogin.cs" />
-    <Compile Include="Areas\Accounts\Services\ApplicationSignInManager.cs" />
-    <Compile Include="Areas\Accounts\Services\ApplicationUserManager.cs" />
-    <Compile Include="Areas\Accounts\Services\EmailService.cs" />
-    <Compile Include="Areas\Accounts\Services\SmsService.cs" />
-    <Compile Include="Areas\Accounts\Services\UserStore.cs" />
-    <Compile Include="Areas\Accounts\Startup.ConfigureAccounts.cs" />
+    <Compile Include="Areas\Identity\Controllers\AccountController.cs" />
+    <Compile Include="Areas\Identity\Controllers\ManageController.cs" />
+    <Compile Include="Areas\Identity\Helpers\IdentityExtensions.cs" />
+    <Compile Include="Areas\Identity\Models\AccountViewModels.cs" />
+    <Compile Include="Areas\Identity\Models\ApplicationDbContext.cs" />
+    <Compile Include="Areas\Identity\Models\ApplicationUser.cs" />
+    <Compile Include="Areas\Identity\Models\IdentityUser.cs" />
+    <Compile Include="Areas\Identity\Models\ManageViewModels.cs" />
+    <Compile Include="Areas\Identity\Models\IdentityUserLogin.cs" />
+    <Compile Include="Areas\Identity\Services\ApplicationSignInManager.cs" />
+    <Compile Include="Areas\Identity\Services\ApplicationUserManager.cs" />
+    <Compile Include="Areas\Identity\Services\EmailService.cs" />
+    <Compile Include="Areas\Identity\Services\SmsService.cs" />
+    <Compile Include="Areas\Identity\Services\UserStore.cs" />
+    <Compile Include="Areas\Identity\Startup.ConfigureAccounts.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -236,30 +236,30 @@
     <None Include="Scripts\_references.js" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Accounts\Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\Login.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\Register.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\ResetPassword.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\ResetPasswordConfirmation.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\SendCode.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\VerifyCode.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\_ChangePasswordPartial.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\_RemoveAccountPartial.cshtml" />
-    <Content Include="Areas\Accounts\Views\Account\_SetPasswordPartial.cshtml" />
-    <Content Include="Areas\Accounts\Views\Manage\AddPhoneNumber.cshtml" />
-    <Content Include="Areas\Accounts\Views\Manage\ChangePassword.cshtml" />
-    <Content Include="Areas\Accounts\Views\Manage\Index.cshtml" />
-    <Content Include="Areas\Accounts\Views\Manage\ManageLogins.cshtml" />
-    <Content Include="Areas\Accounts\Views\Manage\SetPassword.cshtml" />
-    <Content Include="Areas\Accounts\Views\Manage\VerifyPhoneNumber.cshtml" />
-    <Content Include="Areas\Accounts\Views\Shared\Lockout.cshtml" />
-    <Content Include="Areas\Accounts\Views\web.config" />
-    <Content Include="Areas\Accounts\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ExternalLoginFailure.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\Login.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\Register.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ResetPassword.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\SendCode.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\VerifyCode.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\_ChangePasswordPartial.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\_RemoveAccountPartial.cshtml" />
+    <Content Include="Areas\Identity\Views\Account\_SetPasswordPartial.cshtml" />
+    <Content Include="Areas\Identity\Views\Manage\AddPhoneNumber.cshtml" />
+    <Content Include="Areas\Identity\Views\Manage\ChangePassword.cshtml" />
+    <Content Include="Areas\Identity\Views\Manage\Index.cshtml" />
+    <Content Include="Areas\Identity\Views\Manage\ManageLogins.cshtml" />
+    <Content Include="Areas\Identity\Views\Manage\SetPassword.cshtml" />
+    <Content Include="Areas\Identity\Views\Manage\VerifyPhoneNumber.cshtml" />
+    <Content Include="Areas\Identity\Views\Shared\Lockout.cshtml" />
+    <Content Include="Areas\Identity\Views\web.config" />
+    <Content Include="Areas\Identity\Views\_ViewStart.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
