Renamed Startup.ConfigureAccounts to ConfigureIdentity

--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -178,7 +178,7 @@
     <Compile Include="Areas\Identity\Services\EmailService.cs" />
     <Compile Include="Areas\Identity\Services\SmsService.cs" />
     <Compile Include="Areas\Identity\Services\UserStore.cs" />
-    <Compile Include="Areas\Identity\Startup.ConfigureAccounts.cs" />
+    <Compile Include="Areas\Identity\Startup.ConfigureIdentity.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
