Now supporting user roles, woohoo!

--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -168,14 +168,18 @@
     <Compile Include="Areas\Identity\Controllers\ManageController.cs" />
     <Compile Include="Areas\Identity\Helpers\IdentityExtensions.cs" />
     <Compile Include="Areas\Identity\Models\AccountViewModels.cs" />
+    <Compile Include="Areas\Identity\Models\Role.cs" />
+    <Compile Include="Areas\Identity\Models\UserRole.cs" />
     <Compile Include="Areas\Identity\Models\IdentityDbContext.cs" />
-    <Compile Include="Areas\Identity\Models\User.cs" />
-    <Compile Include="Areas\Identity\Models\UserBase.cs" />
     <Compile Include="Areas\Identity\Models\ManageViewModels.cs" />
     <Compile Include="Areas\Identity\Models\IdentityUserLogin.cs" />
+    <Compile Include="Areas\Identity\Models\User.cs" />
+    <Compile Include="Areas\Identity\Models\UserBase.cs" />
+    <Compile Include="Areas\Identity\Services\ApplicationRoleManager.cs" />
     <Compile Include="Areas\Identity\Services\ApplicationSignInManager.cs" />
     <Compile Include="Areas\Identity\Services\ApplicationUserManager.cs" />
     <Compile Include="Areas\Identity\Services\EmailService.cs" />
+    <Compile Include="Areas\Identity\Services\RoleStore.cs" />
     <Compile Include="Areas\Identity\Services\SmsService.cs" />
     <Compile Include="Areas\Identity\Services\UserStore.cs" />
     <Compile Include="Areas\Identity\Startup.ConfigureIdentity.cs" />
