--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Areas\Identity\Services\SmsService.cs" />
     <Compile Include="Areas\Identity\Services\UserStore.cs" />
     <Compile Include="Areas\Identity\Startup.ConfigureIdentity.cs" />
+    <Compile Include="Areas\Identity\Security\AuthorizeRolesAttribute.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
