Moved domain classes into domain namespace

--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -168,15 +168,15 @@
     <Compile Include="Areas\Identity\Controllers\ManageController.cs" />
     <Compile Include="Areas\Identity\Helpers\IdentityExtensions.cs" />
     <Compile Include="Areas\Identity\Models\AccountViewModels.cs" />
-    <Compile Include="Areas\Identity\Models\RoleId.cs" />
-    <Compile Include="Areas\Identity\Models\UserClaim.cs" />
-    <Compile Include="Areas\Identity\Models\Role.cs" />
-    <Compile Include="Areas\Identity\Models\UserRole.cs" />
-    <Compile Include="Areas\Identity\Models\IdentityDbContext.cs" />
+    <Compile Include="Areas\Identity\Domain\RoleId.cs" />
+    <Compile Include="Areas\Identity\Domain\UserClaim.cs" />
+    <Compile Include="Areas\Identity\Domain\Role.cs" />
+    <Compile Include="Areas\Identity\Domain\UserRole.cs" />
+    <Compile Include="Areas\Identity\Domain\IdentityDbContext.cs" />
     <Compile Include="Areas\Identity\Models\ManageViewModels.cs" />
-    <Compile Include="Areas\Identity\Models\UserLogin.cs" />
-    <Compile Include="Areas\Identity\Models\User.cs" />
-    <Compile Include="Areas\Identity\Models\UserBase.cs" />
+    <Compile Include="Areas\Identity\Domain\UserLogin.cs" />
+    <Compile Include="Areas\Identity\Domain\User.cs" />
+    <Compile Include="Areas\Identity\Domain\UserBase.cs" />
     <Compile Include="Areas\Identity\Services\ApplicationRoleManager.cs" />
     <Compile Include="Areas\Identity\Services\ApplicationSignInManager.cs" />
     <Compile Include="Areas\Identity\Services\ApplicationUserManager.cs" />
