--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -194,32 +194,32 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\HtmlHelpers.cs" />
-    <Compile Include="Infrastructure\ActionFilterRegistry.cs" />
-    <Compile Include="Infrastructure\Alerts\Alert.cs" />
-    <Compile Include="Infrastructure\Alerts\AlertDecoratorResult.cs" />
-    <Compile Include="Infrastructure\Alerts\AlertHelpers.cs" />
-    <Compile Include="Infrastructure\ControllerConvention.cs" />
+    <Compile Include="Areas\Infrastructure\ActionFilterRegistry.cs" />
+    <Compile Include="Areas\Infrastructure\Alerts\Alert.cs" />
+    <Compile Include="Areas\Infrastructure\Alerts\AlertDecoratorResult.cs" />
+    <Compile Include="Areas\Infrastructure\Alerts\AlertHelpers.cs" />
+    <Compile Include="Areas\Infrastructure\ControllerConvention.cs" />
     <Compile Include="Areas\Identity\Models\CurrentUser.cs" />
     <Compile Include="Areas\Identity\Models\ICurrentUser.cs" />
-    <Compile Include="Infrastructure\ModelMetadata\ExtensibleModelMetadataProvider.cs" />
-    <Compile Include="Infrastructure\ModelMetadata\Filters\TextAreaByNameFilter.cs" />
-    <Compile Include="Infrastructure\ModelMetadata\Filters\LabelConventionFilter.cs" />
-    <Compile Include="Infrastructure\ModelMetadata\Filters\ReadOnlyTemplateSelectorFilter.cs" />
-    <Compile Include="Infrastructure\ModelMetadata\IModelMetadataFilter.cs" />
-    <Compile Include="Infrastructure\ModelMetadata\ModelMetadataRegistry.cs" />
-    <Compile Include="Infrastructure\MvcRegistry.cs" />
-    <Compile Include="Infrastructure\ControllerRegistry.cs" />
     <Compile Include="Infrastructure\SeedData.cs" />
-    <Compile Include="Infrastructure\StandardRegistry.cs" />
-    <Compile Include="Infrastructure\StructureMapDependencyResolver.cs" />
-    <Compile Include="Infrastructure\StructureMapFilterProvider.cs" />
-    <Compile Include="Infrastructure\Tasks\IRunAfterEachRequest.cs" />
-    <Compile Include="Infrastructure\Tasks\IRunAtStartup.cs" />
-    <Compile Include="Infrastructure\Tasks\IRunOnError.cs" />
-    <Compile Include="Infrastructure\Tasks\IRunOnEachRequest.cs" />
-    <Compile Include="Infrastructure\Tasks\IRunAtInit.cs" />
-    <Compile Include="Infrastructure\Tasks\TaskRegistry.cs" />
-    <Compile Include="Infrastructure\TransactionPerRequest.cs" />
+    <Compile Include="Areas\Infrastructure\ModelMetadata\ExtensibleModelMetadataProvider.cs" />
+    <Compile Include="Areas\Infrastructure\ModelMetadata\Filters\TextAreaByNameFilter.cs" />
+    <Compile Include="Areas\Infrastructure\ModelMetadata\Filters\LabelConventionFilter.cs" />
+    <Compile Include="Areas\Infrastructure\ModelMetadata\Filters\ReadOnlyTemplateSelectorFilter.cs" />
+    <Compile Include="Areas\Infrastructure\ModelMetadata\IModelMetadataFilter.cs" />
+    <Compile Include="Areas\Infrastructure\ModelMetadata\ModelMetadataRegistry.cs" />
+    <Compile Include="Areas\Infrastructure\MvcRegistry.cs" />
+    <Compile Include="Areas\Infrastructure\ControllerRegistry.cs" />
+    <Compile Include="Areas\Infrastructure\StandardRegistry.cs" />
+    <Compile Include="Areas\Infrastructure\StructureMapDependencyResolver.cs" />
+    <Compile Include="Areas\Infrastructure\StructureMapFilterProvider.cs" />
+    <Compile Include="Areas\Infrastructure\Tasks\IRunAfterEachRequest.cs" />
+    <Compile Include="Areas\Infrastructure\Tasks\IRunAtStartup.cs" />
+    <Compile Include="Areas\Infrastructure\Tasks\IRunOnError.cs" />
+    <Compile Include="Areas\Infrastructure\Tasks\IRunOnEachRequest.cs" />
+    <Compile Include="Areas\Infrastructure\Tasks\IRunAtInit.cs" />
+    <Compile Include="Areas\Infrastructure\Tasks\TaskRegistry.cs" />
+    <Compile Include="Areas\Infrastructure\TransactionPerRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
