--- a/Xo/Xo.csproj
+++ b/Xo/Xo.csproj
@@ -193,7 +193,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\HtmlHelpers.cs" />
+    <Compile Include="Areas\Infrastructure\Helpers\HtmlHelpers.cs" />
     <Compile Include="Areas\Infrastructure\ActionFilterRegistry.cs" />
     <Compile Include="Areas\Infrastructure\Alerts\Alert.cs" />
     <Compile Include="Areas\Infrastructure\Alerts\AlertDecoratorResult.cs" />
