Improved support for quickly generating controllers
* Added area, controller, and view code templates
* Added and updated model metadata filters
* Added and improved shared views and editor templates

--- a/Xo/Web.config
+++ b/Xo/Web.config
@@ -28,7 +28,9 @@
   <system.web.webPages.razor>
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
+        <add namespace="Humanizer" />
         <add namespace="Xo.Areas.Infrastructure.Helpers" />
+        <add namespace="Xo.Areas.Infrastructure.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
